--- a/PBShop/Web.config
+++ b/PBShop/Web.config
@@ -13,6 +13,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <!--VNPAY SETTINGS-->
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+	  <add key="vnp_TmnCode" value="IUIO2TLU" />
+	  <add key="vnp_HashSecret" value="WANNDAGZBSABNSJVSIYQWEWKHXWIVRDS" />
+	  <add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
